--- a/Redis.xcodeproj/xcshareddata/xcschemes/Redis.xcscheme
+++ b/Redis.xcodeproj/xcshareddata/xcschemes/Redis.xcscheme
@@ -32,7 +32,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "redis-server --port 11235&amp;">
+               scriptText = "/usr/local/bin/redis-server --port 11235&amp;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
@@ -41,7 +41,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "redis-cli -p 11235 shutdown">
+               scriptText = "/usr/local/bin/redis-cli -p 11235 shutdown">
             </ActionContent>
          </ExecutionAction>
       </PostActions>
